# kuzzi

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml
kuzzi/: main.py  test.py
kuzzi/src/: connectors.py  embed.py  llm.py  vector_store.py
kuzzi/src/train/: trainer.py
kuzzi/src/train/training_data/: tickets.yaml
